bitfield/tests/15-bits-attribute-on-field-with-more-than-128-bits.rs
#[allow(unused_imports)]
use bitfield::{bitfield, B8};

#[bitfield]
struct Test {
    #[bits = 129]
    field: B8,
}

fn main() {}
